# itmo_activity_2_semester

./: CMakeLists.txt  Cube.h  README.md
Algo_Labs/Lab_1/: task_1.cpp  task_10.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
Algo_Labs/Lab_2/: task_1.cpp  task_10.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
Algo_Labs/Lab_3/: task_1.cpp  task_10.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
Algo_Labs/Lab_4/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp
Algo_Labs/Lab_5/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp
Algo_Labs/Lab_6/: task_1.cpp  task_2.cpp  task_3.cpp  task_5.cpp  task_6.cpp
Lab_1/: CMakeLists.txt  functions.cpp  header.h  main.cpp
Lab_2/: CMakeLists.txt  Stack.cpp  main.cpp
Lab_3/: CMakeLists.txt  Complex.cpp  Complex.h  Integers_Subset.cpp  main.cpp
Lab_4/: Equilateral_Triangle.cpp  Equilateral_Triangle.h  Parallelogram.cpp  Parallelogram.h  Virtuals.h  main.cpp
Lab_5/: Exceptions.cpp  Exceptions.h  Stack.h  Swap.h  main.cpp
Lab_6/: Algorithms.cpp  Algorithms.h  Functions.cpp  Functions.h  main.cpp
Lab_7/: CircularBuffer.h  main.cpp
Lab_8/: Algorighms.cpp  Algorighms.h  CMakeLists.txt  Colors.cpp  Cube.cpp  MainCube.cpp  MainCube.h  Squares.cpp  Squares.h  VisualisationCube.cpp  VisualisationCube.h  main.cpp
Lab_8/Edges/: back.glslf  main.glslv  right.glslf  up.glslf
Lab_8/OutputAndInput/: input.txt
Lab_9/: CMakeLists.txt  CurrencyMoneyRate.cpp  CurrencyMoneyRate.h  main.cpp  output.txt
Programming_Basics_Labs/Lab_1/: main.cpp
Programming_Basics_Labs/Lab_2/: Stack.h  main.cpp
Programming_Basics_Labs/Lab_3/: Complex.h  Integers_Subset.h
Programming_Basics_Labs/Lab_4/: Parallelogram.cpp  Parallelogram.h  Virtuals.cpp  Virtuals.h  main.cpp
Programming_Basics_Labs/Lab_6/: Complex.cpp  Complex.h  main.cpp
Programming_Basics_Labs/Lab_7/: CircularBuffer.h  main.cpp
Programming_Basics_Labs/Lab_8/: Colors.h
Programming_Basics_Labs/Lab_8/Edges/: bottom.glslf  front.glslf  left.glslf
Programming_Basics_Labs/Lab_9/: CMakeLists.txt  CurrencyMoneyRate.cpp  main.cpp
